# Channels

./: README.md  build_bpy.py  package.xml  pyproject.toml
freecad/channels/: __init__.py  blender.py  config.py  export.py  init_gui.py  preferences.py  service.py
freecad/channels/api/: __init__.py  _qt.py  _service.py  _types.py
freecad/channels/commands/: __init__.py  blender.py  service.py
freecad/channels/resources/translations/: __init__.py  channels_de.ts  channels_en.ts  channels_es.ts  channels_fr.ts
freecad_bpy/: __init__.py  blender_manifest.toml  bpy_channels.py  service.py
